# orgcontext

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: docs.md  entry-fix.md  entry-new.md  infra.md  tooling.md
.github/workflows/: ci.yml  publish.yml
core/culture-values/: belonging.md  feedback-culture.md  psychological-safety.md  team-norms.md  trust.md
core/governance/: decision-rights.md  escalation-path.md  raci.md  steering-committee.md  working-group.md
core/industry/enterprise/: digital-transformation.md
core/industry/nonprofit/: theory-of-change.md
core/industry/tech-startup/: product-market-fit.md
core/leadership-frameworks/: adaptive-leadership.md  distributed-leadership.md  servant-leadership.md  situational-leadership.md  transformational-leadership.md
core/mission-vision/: bhag.md  mission-alignment.md  organizational-purpose.md  vision.md
core/roles-responsibilities/: chief-of-staff.md  cto.md  engineering-manager.md  product-manager.md  product-owner.md  scrum-master.md
core/strategy-execution/: change-management.md  cynefin.md  north-star-metric.md  okrs.md  portfolio-management.md  strategy-map.md
docs/: PROJECT-GUIDE.md  entry-format.md  entry-template.md  index.md
examples/: usage.py
integrations/crewai/: loader.py
integrations/langgraph/: node.py
orgcontext/: __init__.py  cli.py  mcp_server.py
orgcontext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orgcontext/integrations/: __init__.py
orgcontext/integrations/crewai/: __init__.py  loader.py
orgcontext/integrations/langgraph/: __init__.py  node.py
orgcontext/integrations/openai_agents/: __init__.py  tool.py
scripts/: build_index.py  setup_labels.py  validate_entry.py
tests/: test_build_index.py  test_cli.py  test_core.py  test_integrations.py
