[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orgcontext"
version = "0.2.0"
description = "LLM-native dictionary of mission, vision, roles, leadership frameworks, and organizational concepts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "llm",
    "agents",
    "organizational-context",
    "leadership",
    "prompt-engineering",
    "rag",
    "context-engineering",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
    "PyYAML>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
]
mcp = ["mcp>=1.0; python_version >= '3.10'", "PyYAML>=6.0"]
openai-agents = ["openai-agents>=0.0.3; python_version >= '3.10'"]

[project.scripts]
orgcontext-mcp = "orgcontext.mcp_server:main"
orgcontext = "orgcontext.cli:main"

[project.urls]
Homepage = "https://github.com/sevasek/orgcontext"
Documentation = "https://github.com/sevasek/orgcontext/blob/main/docs/"
Repository = "https://github.com/sevasek/orgcontext"
Issues = "https://github.com/sevasek/orgcontext/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["orgcontext*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]